v 3.6.78 Add RPID and EVID output columns options for list view Remove use of JResponse class in RSS feed data source Fix colour picker in Joomla 5 dark mode Convert URLs in event description to absolute URLS in iCal export Avoid missing Trunactor class when ht_strlen is available Workaround browsers not allowing iframe about:blank URLs for empty pages

--- a/component/admin/assets/less/j4.less
+++ b/component/admin/assets/less/j4.less
@@ -338,7 +338,7 @@ body.com_categories.view-categories {
       background-color: #fff;
       background-image: none;
       color: #111;
-      joomla-tab-element, th, td, button, legend, div {
+      joomla-tab-element, th, td, button, legend, div:not(.minicolors-panel, .minicolors-panel div){
         background-color: #fff;
         background-image: none;
         color: #111;
